# k_means_remaster

./: .editorconfig  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  READ ME.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cluster.cpp  cmake_install.cmake  functions.cpp  functions.h  klasters.sln  klasters.vcxproj  klasters.vcxproj.filters  kmeans.cpp  output.txt  point.cpp  point.h  t.txt  t2.txt  t3.txt
.github/workflows/: ccpp.yml
klasters/: Cluster.cpp  Cluster.h  functions.cpp  functions.h  input.txt  klasters.vcxproj  klasters.vcxproj.filters  kmeans.cpp  output.txt  point.cpp  point.h
